# typre

./: .gitignore  Cargo.toml  README.md  config.toml  log
sets/: english_1k
src/: config.rs  db.rs  dump.rs  main.rs  rand.rs  result.rs  test.rs  theme.rs  ui.rs  words.rs
