[package]
name = "typre"
authors = ["Ryan Keleti <github@ryankeleti.com>"]
license = "GPL-3.0-only"
version = "0.0.0"
edition = "2021"
description = "A typing test"

[dependencies]
termion = "1.5"
rusqlite = { version = "0.28", features = ["bundled"] }
bincode = { version = "2.0.0-rc.1", features = ["alloc"], default-features = false }
unicode-width = "0.1"
pico-args = "0.5"
toml = "0.5"

[profile.release]
strip = true
